fixed s8 final project

--- a/session8/complete/distribute.ipynb
+++ b/session8/complete/distribute.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "# disperse\n",
     "from ecc import PrivateKey\n",
-    "from helper import decode_base58, hash256, little_endian_to_int, SIGHASH_ALL\n",
+    "from helper import decode_base58, hash256, little_endian_to_int\n",
     "from script import p2pkh_script, Script\n",
     "from tx import TxIn, TxOut, Tx\n",
     "\n",
@@ -29,7 +29,7 @@
     "if (len(utxos) == 0):\n",
     "    raise RuntimeError('no outputs!')\n",
     "\n",
-    "student_addresses = ''\n",
+    "student_addresses = 'mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv'\n",
     "# initialize inputs\n",
     "tx_ins = []\n",
     "total = 0\n",
@@ -38,12 +38,7 @@
     "    prev_index = utxo['tx_output_n']\n",
     "    total += utxo['value']\n",
     "    # create a new tx input\n",
-    "    tx_ins.append(TxIn(\n",
-    "            prev_tx=prev_tx,\n",
-    "            prev_index=prev_index,\n",
-    "            script_sig=Script([]),\n",
-    "            sequence=0xffffffff,\n",
-    "        ))\n",
+    "    tx_ins.append(TxIn(prev_tx, prev_index))\n",
     "# initialize outputs\n",
     "tx_outs = []\n",
     "output_amount = 0\n",
@@ -71,7 +66,7 @@
     "\n",
     "# now sign the 0th input with the private key using SIGHASH_ALL using sign_input\n",
     "for i in range(len(tx_obj.tx_ins)):\n",
-    "    tx_obj.sign_input(i, priv, SIGHASH_ALL)\n",
+    "    tx_obj.sign_input(i, priv)\n",
     "\n",
     "# SANITY CHECK: fee is reasonable\n",
     "if tx_obj.fee() > 0.05*100000000 or tx_obj.fee() <= 0:\n",
@@ -86,7 +81,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tx_in = TxIn(\n",
+    "    bytes.fromhex(\n",
+    "        'e591ea6abf3db4812e6ba594a5015a079bb40b5962414367e210ff5ac0c62826'), 1)\n",
+    "amount = tx_in.value(testnet=True) - 50000\n",
+    "script_pubkey = p2pkh_script(decode_base58('mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv'))\n",
+    "print(script_pubkey)\n",
+    "tx_out = TxOut(amount, script_pubkey)\n",
+    "\n",
+    "tx_obj = Tx(1, [tx_in], [tx_out], 0, testnet=True)\n",
+    "print(tx_obj.serialize().hex())"
+   ]
   },
   {
    "cell_type": "code",
@@ -100,7 +106,7 @@
     "\n",
     "# disperse\n",
     "from ecc import PrivateKey\n",
-    "from helper import decode_base58, hash256, little_endian_to_int, SIGHASH_ALL\n",
+    "from helper import decode_base58, hash256, little_endian_to_int\n",
     "from script import p2pkh_script, Script\n",
     "from tx import TxIn, TxOut, Tx\n",
     "\n",
@@ -117,7 +123,7 @@
     "if (len(utxos) == 0):\n",
     "    raise RuntimeError('no outputs!')\n",
     "\n",
-    "student_addresses = ''\n",
+    "student_addresses = 'mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv'\n",
     "# initialize inputs\n",
     "tx_ins = []\n",
     "total = 0\n",
@@ -126,12 +132,7 @@
     "    prev_index = utxo['tx_output_n']\n",
     "    total += utxo['value']\n",
     "    # create a new tx input\n",
-    "    tx_ins.append(TxIn(\n",
-    "            prev_tx=prev_tx,\n",
-    "            prev_index=prev_index,\n",
-    "            script_sig=Script([]),\n",
-    "            sequence=0xffffffff,\n",
-    "        ))\n",
+    "    tx_ins.append(TxIn(prev_tx, prev_index))\n",
     "\n",
     "# initialize outputs\n",
     "tx_outs = []\n",
@@ -145,10 +146,7 @@
     "    target_satoshis = randint(5000000, 20000000)\n",
     "    output_amount += target_satoshis\n",
     "    # create a new tx output for target\n",
-    "    tx_outs.append(TxOut(\n",
-    "        amount=target_satoshis,\n",
-    "        script_pubkey=script_pubkey,\n",
-    "    ))\n",
+    "    tx_outs.append(TxOut(target_satoshis, script_pubkey))\n",
     "\n",
     "change_satoshis = total - int((fee)*100000000) - output_amount\n",
     "\n",
@@ -161,7 +159,7 @@
     "\n",
     "# now sign the 0th input with the private key using SIGHASH_ALL using sign_input\n",
     "for i in range(len(tx_obj.tx_ins)):\n",
-    "    tx_obj.sign_input(i, priv, SIGHASH_ALL)\n",
+    "    tx_obj.sign_input(i, priv)\n",
     "\n",
     "# SANITY CHECK: fee is reasonable\n",
     "if tx_obj.fee() > 0.05*100000000 or tx_obj.fee() <= 0:\n",
