--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -8,10 +8,11 @@
    "source": [
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
-    "from helper import run\n",
+    "from random import randint\n",
     "\n",
-    "import ecc\n",
-    "import helper"
+    "import ecc, helper\n",
+    "\n",
+    "from helper import run"
    ]
   },
   {
@@ -61,13 +62,9 @@
     "# remember that % is the modulo operator\n",
     "prime = 31\n",
     "# 2+15=?\n",
-    "print((2+15) % prime)\n",
     "# 17+21=?\n",
-    "print((17+21) % prime)\n",
     "# 29-4=?\n",
-    "print((29-4) % prime)\n",
-    "# 15-30=?\n",
-    "print((15-30) % prime)"
+    "# 15-30=?"
    ]
   },
   {
@@ -142,8 +139,6 @@
    "outputs": [],
    "source": [
     "# Exercise 2.2\n",
-    "\n",
-    "from random import randint\n",
     "\n",
     "prime = 31\n",
     "k = randint(1,prime)\n",
