--- a/session0/complete/session0.ipynb
+++ b/session0/complete/session0.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,24 +160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12592"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "some_long_variable_name\n",
+    "some_\n",
     "\n",
-    "little_endian_to_int(b'01')"
+    "little_endian_to_int()"
    ]
   },
   {
@@ -262,21 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5, 4, 3, 2, 1]\n",
-      "dlrow olleh\n",
-      "b'dlrow olleh'\n",
-      "38\n",
-      "b'&'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = [1, 2, 3, 4, 5]\n",
     "print(a[::-1]) # [5, 4, 3, 2, 1]\n",
@@ -302,18 +279,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "68656c6c6f20776f726c64\n",
-      "b'hello world'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(b'hello world'.hex())\n",
     "print(bytes.fromhex('68656c6c6f20776f726c64'))"
@@ -332,17 +300,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9ad27d329e9588ca1e59afef4160014d11b8b2096efd1dcc84bcb4829ca410b0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 2\n",
     "\n",
@@ -382,17 +342,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(39 % 12)"
    ]
@@ -414,19 +366,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "0\n",
-      "16\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 3\n",
     "\n",
@@ -474,20 +416,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "499602d2\n",
-      "d2029649\n",
-      "1234567890\n",
-      "1234567890\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 1234567890\n",
     "big_endian = n.to_bytes(4, 'big')\n",
@@ -521,18 +452,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'\\x00\\x00\\x00\\x00\\x00\\x84_\\xed'\n",
-      "366216421905\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 4.1\n",
     "\n",
@@ -545,26 +467,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n",
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.000s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exercise 4.2\n",
     "\n",
@@ -590,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
